Update to latest

--- a/icons/CMakeLists.txt
+++ b/icons/CMakeLists.txt
@@ -1,7 +1,11 @@
 ecm_install_icons( 
     ICONS
         16-apps-mycroft-plasma-appicon.svg
+        16-apps-mycroft-appicon-connected.svg
+        16-apps-mycroft-appicon-disconnected.svg
         32-apps-mycroft-plasma-appicon.svg
+        32-apps-mycroft-appicon-connected.svg
+        32-apps-mycroft-appicon-disconnected.svg
     DESTINATION ${ICON_INSTALL_DIR}
     THEME hicolor
 )
