--- a/plasmoid/metadata.desktop
+++ b/plasmoid/metadata.desktop
@@ -1,33 +1,33 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name=MycroftPlasmoid
-Name[ca]=Plasmoide del Mycroft
-Name[ca@valencia]=Plasmoide del Mycroft
-Name[cs]=MycroftPlasmoid
-Name[de]=MycroftPlasmoid
-Name[es]=Plasmoide de Mycroft
-Name[et]=Mycrofti plasmoid
-Name[fi]=MycroftPlasmoid
-Name[fr]=MycroftPlasmoid
-Name[gl]=Plasmoide de Mycroft
-Name[ia]=MycroftPlasmoid
-Name[it]=Plasmoide Mycroft
-Name[ko]=MycroftPlasmoid
-Name[nl]=MycroftPlasmoid
-Name[pl]=PlazmoidMycroft
-Name[pt]=MycroftPlasmoid
-Name[pt_BR]=MycroftPlasmoid
-Name[sk]=MycroftPlasmoid
-Name[sv]=Mycroft Plasmoid
-Name[tg]=MycroftPlasmoid
-Name[uk]=Плазмоїд Mycroft
-Name[x-test]=xxMycroftPlasmoidxx
-Name[zh_TW]=MycroftPlasmoid
-Comment=Mycroft applet for plasma desktop
+Name=MycroftPlasmoidMobile
+Name[ca]=Plasmoide del Mycroft Mobile
+Name[ca@valencia]=Plasmoide del Mycroft Mobile
+Name[cs]=MycroftPlasmoidMobile 
+Name[de]=MycroftPlasmoidMobile
+Name[es]=Plasmoide de Mycroft Mobile
+Name[et]=Mycrofti plasmoid Mobile
+Name[fi]=MycroftPlasmoidMobile
+Name[fr]=MycroftPlasmoidMobile
+Name[gl]=Plasmoide de Mycroft Mobile
+Name[ia]=MycroftPlasmoidMobile
+Name[it]=Plasmoide Mycroft Mobile
+Name[ko]=MycroftPlasmoidMobile
+Name[nl]=MycroftPlasmoidMobile
+Name[pl]=PlazmoidMycroftMobile
+Name[pt]=MycroftPlasmoidMobile
+Name[pt_BR]=MycroftPlasmoidMobile
+Name[sk]=MycroftPlasmoidMobile
+Name[sv]=Mycroft PlasmoidMobile
+Name[tg]=MycroftPlasmoidMobile
+Name[uk]=Плазмоїд MycroftMobile
+Name[x-test]=xxMycroftPlasmoidMobilexx
+Name[zh_TW]=MycroftPlasmoidMobile
+Comment=Mycroft applet for plasma mobile
 Comment[ca]=Miniaplicació Mycroft per a l'escriptori Plasma
 Comment[ca@valencia]=Miniaplicació Mycroft per a l'escriptori Plasma
-Comment[cs]=Applet Mycroft pro pracovní prostředí Plasma
-Comment[de]=Mycroft-Miniprogramm für die Plasma-Arbeitsfläche
+Comment[cs]=Applet Mycroft pro pracovní prostředí Plasma Mobile
+Comment[de]=Mycroft-Miniprogramm für die Plasma-Arbeitsfläche 
 Comment[es]=Miniaplicación Mycroft para el escritorio Plasma
 Comment[et]=Mycrofti aplett Plasma töölauale
 Comment[fi]=Mycroft-sovelma Plasma-työpöydälle
@@ -50,7 +50,7 @@ X-KDE-ParentApp=
 X-KDE-PluginInfo-Author=Aditya Mehra
 X-KDE-PluginInfo-Email=aix.m@outlook.com
 X-KDE-PluginInfo-License=GPL
-X-KDE-PluginInfo-Name=org.kde.phone.mycroftplasmoid
+X-KDE-PluginInfo-Name=org.kde.phone.mycroftplasmoidmobile
 X-KDE-PluginInfo-Version=0.1
 X-KDE-PluginInfo-Website=plasma.kde.org
 X-KDE-ServiceTypes=Plasma/Applet
